# Pascoal

./: .gitattributes  .gitignore  .prettierrc  KNOWN_ISSUES.md  LICENSE  README.md  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: compiler_runtime_issue.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
.github/workflows/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml
.husky/: pre-commit
atividades/Algoritmos1/HelloWorld/: manifest.json
atividades/HelloWorld/solucoes/: exemplo.pas
docs/readme/: es-419.md  pl.md  pt-BR.md
scripts/: set-version.cjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: compiler.rs  env.rs  fs.rs  git.rs  installer.rs  lib.rs  process.rs  winproc.rs
src-tauri/src/tests/: compile_tests.rs  explorer_tests.rs  file_tests.rs  fpc_tests.rs  git_tests.rs  mod.rs  search_tests.rs
src-tauri/tests/: pascal_runner.rs
src/main/: constants.js  fpc.js  main.js  preload.js
src/main/handlers/: activities.js  app.js  compiler.js  examples.js  window.js
src/main/i18n/: index.js  strings.json
src/renderer/: index.html
src/renderer/css/: editor.css  main.css  modal.css  sidebar.css  terminal.css  titlebar.css
src/renderer/i18n/: en-US.json  pt-BR.json
src/renderer/ide/: index.html  tsconfig.json  vite.config.ts
src/renderer/js/: app.js  editor.js  i18n.js  resize.js  terminal.js  titlebar.js
src/renderer/partials/: editor.html  modal-welcome.html  sidebar.html  terminal.html  titlebar.html
tests/frontend/: setup.ts
tests/frontend/stores/: console.test.ts  explorer.test.ts  git.test.ts  i18n.test.ts  i18n.ts  recent.test.ts  search.test.ts  (+2 more)
tests/pascal/: README.md
(+253 files in other folders)
