[package]
name = "pascoal"
version = "0.23.1"
description = "A modern Pascal playground and IDE"
authors = ["Brener Fregulia"]
license = "MIT"
repository = "https://github.com/brener-fregulia/Pascoal"
edition = "2021"
rust-version = "1.85.0"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
portable-pty = "0.9.0"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }

[[test]]
name = "pascal_runner"
path = "tests/pascal_runner.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
